[package]
name = "conquest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["ws"] }
legion = { version = "*", default-features = false, features = ["wasm-bindgen", "codegen"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
serde = { version = "*", features = ["derive"] }
